# dbt-databricks

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.MD  Makefile  PLAN_v2_session_mode.md  README.md  adapters.sql  black.ini  dev-requirements.txt  dev_requirements.txt  mike+anders.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.lowest-direct.txt  requirements.txt  ruff.toml  setup.py  test.env.example  tox.ini
.agents/skills/dbt-databricks-pr-ready/: SKILL.md  eval-spec.md
.bot/: SETUP.md  config.yaml
.bot/prompts/: author_system.md  author_user.md  followup_system.md
.claude/skills/dbt-databricks-pr-ready/: SKILL.md  eval-spec.md
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  test_timings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release.md
.github/actions/setup-jfrog/: action.yml
.github/actions/setup-jfrog-pypi/: action.yml
.github/actions/setup-python-deps/: action.yml
.github/scripts/: integration-test-matrix.js
.github/workflows/: build_cluster_http_path.py  ci-pr-linting.yml  cleanup-python-model-dirs.yml  coverage.yml  engineer-bot-followup.yml  engineer-bot.yml  integration-kernel.yml  integration-manual.yml  integration-min-deps.yml  integration-spog.yml  integration-trigger.yml  integration.yml  integration_v2.yml  main-min-deps.yml  main.yml  min-deps-lock-drift.yml  min-deps-parse.yml  min-deps-test-fast.yml  min-deps-test-slow.yml  min-deps-tests.yml  publish.yml  read_http_path.py  refresh-test-timings.yml  release-wheel.yml  release.yml  reviewer-bot-followup.yml  reviewer-bot.yml  spog-integration.yml  stale.yml  upstream-sync.yml  warmDepsCache.yml
dbt/adapters/databricks/: __init__.py  __version__.py  api.py  api_client.py  auth.py  capability_support.py  column.py  connections.py  constants.py  constraints.py  context.py  credentials.py  dbr_capabilities.py  dbsql.py  global_state.py  handle.py  impl.py  logging.py  macros.py  models.py  parse_model.py  persist_doc_column_warnings.py  python_submissions.py  relation.py  relation_apis.py  session.py  session_connection.py  utils.py
dbt/include/databricks/: profile_template.yml  sample_profiles.yml
docs/: databricks-copy-into-macro-aws.md  databricks-dbt-constraints-vs-model-contracts.md  databricks-jobs.md  databricks-merge.md  databricks-workflows.md  dbr-capability-system.md  dbt-databricks-dev.md  github-actions.md  incremental_flow.md  local-dev.md  metric_view_flow.md  oauth.md  replace_flow.md  seed_flow.md  table_flow.md  testing.md  uc.md  view_flow.md  workflow-job-submission.md
docs/superpowers/plans/: 2026-04-22-session-python-timeout.md  2026-05-19-dbt-databricks-spog.md
docs/superpowers/specs/: 2026-04-22-session-python-timeout-design.md  2026-04-24-devcontainer-design.md  2026-04-24-multi-version-release-branches-design.md  2026-05-19-dbt-databricks-spog-design.md
scripts/: build-dist.sh  check_uv_lock_public_urls.py  cleanup_python_model_dirs.py  refresh_timings.py  regenerate_min_deps_lock.sh  regenerate_timings.py  shard_assign.py  shard_verify.py  test_timings.json
test/custom/: base.py  conftest.py
test/custom/get_columns_in_relation/: test_get_columns_in_relation.py
test/custom/incremental_on_schema_change/: test_incremental_on_schema_change.py
test/custom/incremental_strategies/: test_incremental_strategies.py
test/custom/persist_docs/: test_persist_docs.py
test/custom/seed_column_types/: test_seed_column_types.py
test/custom/store_failures/: test_store_failures.py
test/unit/: test_adapter.py  test_column.py  test_macros.py
tests/: conftest.py  profiles.py  utils.py
tests/functional/adapter/: fixtures.py  helpers.py  test_basic.py  test_changing_relation_type.py  test_concurrency.py  test_constraints.py  test_dbt_clone.py  test_ephemeral.py  test_get_intervals_between.py  test_get_powers_of_two.py  test_grants.py  test_incremental_predicates.py  test_incremental_unique_id.py  test_python.py  test_python_model.py  test_query_comment.py  test_seeds.py  test_show.py  test_source_freshness.py  test_store_failures_as.py
tests/generic/: Column_date_value_not_null.sql
tests/integration/: base.py  conftest.py  spark-databricks-odbc-cluster.dbtspec
tests/integration/avoid_describe_extended/: test_avoid_describe_extended.py
tests/integration/constraint_test/: test_constraints.py
tests/integration/copy_into/: test_copy_into.py
tests/integration/current_catalog/: test_current_catalog.py
tests/integration/debug/: test_debug.py
tests/integration/fail_fast/: test_fail_fast.py
tests/integration/get_columns_in_relation/: test_get_columns_in_relation.py
tests/integration/incremental_on_schema_change/: test_incremental_on_schema_change.py
tests/min_deps_smoke/: .gitignore  dbt_project.yml  profiles.yml
tests/specs/: databricks-cluster.dbtspec  databricks-sql-endpoint.dbtspec  databricks-uc-cluster.dbtspec  databricks-uc-sql-endpoint.dbtspec  spark-databricks-http.dbtspec  spark-databricks-odbc-sql-endpoint.dbtspec  spark-databricks-sql-connector.dbtspec  spark-databricks-sql-endpoint-connector.dbtspec  spark-thrift.dbtspec
tests/unit/: conftest.py  fixtures.py  test_adapter.py  test_adapter_capabilities.py  test_auth.py  test_catalog.py  test_catalogs_v2.py  test_cleanup_python_model_dirs.py  test_column.py  test_compute_config.py  test_connection_manager.py  test_connection_utils.py  test_constraints.py  test_credentials_cluster_id_regex.py  test_dbr_capabilities.py  test_describe_json_metadata.py  test_handle.py  test_idle_config.py  test_integration_workflow_dispatch.py  test_macros.py  test_metadata.py  test_parse_model.py  test_persist_doc_column_warnings.py  test_query_comment.py  test_query_config.py  test_query_tags.py  test_regenerate_timings.py  test_relation.py  test_session.py  test_session_connections.py  test_session_credentials.py  test_session_python.py  test_utils.py  test_v2_catalog_configs.py  utils.py
(+548 files in other folders)
