[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-databricks"
dynamic = ["version"]
description = "The Databricks adapter plugin for dbt"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Databricks", email = "feedback@databricks.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.2.0, <9.0.0",
    "databricks-sdk>=0.68.0, <0.105.0",
    "databricks-sql-connector[pyarrow]>=4.1.1, <4.2.7",
    "dbt-adapters>=1.22.0, <1.25.0",
    "dbt-common>=1.37.0, <1.38.0",
    "dbt-core>=1.11.2, <1.11.12",
    "dbt-spark>=1.10.0, <1.11.0",
    "keyring>=23.13.0, <25.6.0",
    "packaging>=21.0, <26.0",
    "pydantic>=1.10.0, <2.13.0",
]

[project.urls]
homepage = "https://github.com/databricks/dbt-databricks"
changelog = "https://github.com/databricks/dbt-databricks/blob/main/CHANGELOG.md"
documentation = "https://docs.getdbt.com/reference/resource-configs/databricks-configs"
issues = "https://github.com/databricks/dbt-databricks/issues"
repository = "https://github.com/databricks/dbt-databricks"

[tool.hatch.version]
path = "dbt/adapters/databricks/__version__.py"

[tool.hatch.build]
include = ["/dbt"]

[dependency-groups]
test = [
    "dbt-tests-adapter>=1.20.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "pytest-rerunfailures>=14.0",
    "pytest-dotenv>=0.5.2",
    "freezegun>=1.5.1",
    "pytest-cov>=6.0.0",
]
dev = [
    {include-group = "test"},
    "mypy>=1.18.2",
    "pre-commit",
    "ruff==0.14.2",
    "types-requests",
    "debugpy",
]

[tool.hatch.envs.verify]
detached = true
python = "3.10"
dependencies = ["wheel", "twine", "check-wheel-contents"]

[tool.hatch.envs.verify.scripts]
check-all = ["- check-wheel", "- check-sdist"]
check-wheel = [
    "twine check dist/*",
    "find ./dist/dbt_databricks-*.whl -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-databricks",
    "dbt parse --project-dir tests/min_deps_smoke --profiles-dir tests/min_deps_smoke",
]
check-sdist = [
    "check-wheel-contents dist/*.whl --ignore W007,W008",
    "find ./dist/dbt_databricks-*.gz -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-databricks",
    "dbt parse --project-dir tests/min_deps_smoke --profiles-dir tests/min_deps_smoke",
]

[tool.hatch.envs.verify-min-deps]
detached = true
python = "3.10"
dependencies = ["wheel", "twine", "check-wheel-contents"]

[tool.hatch.envs.verify-min-deps.scripts]
# Each script installs the lowest-direct lock first (idempotent),
# then validates the built artifact against it.
install-lock = "python -m pip install --no-deps --require-hashes -r requirements.lowest-direct.txt"
check-all = ["- check-wheel", "- check-sdist"]
check-wheel = [
    "install-lock",
    "twine check dist/*",
    "find ./dist/dbt_databricks-*.whl -maxdepth 1 -type f | xargs python -m pip install --no-deps --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-databricks",
    "dbt parse --project-dir tests/min_deps_smoke --profiles-dir tests/min_deps_smoke",
]
check-sdist = [
    "install-lock",
    "check-wheel-contents dist/*.whl --ignore W007,W008",
    "find ./dist/dbt_databricks-*.gz -maxdepth 1 -type f | xargs python -m pip install --no-deps --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-databricks",
    "dbt parse --project-dir tests/min_deps_smoke --profiles-dir tests/min_deps_smoke",
]

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]
python = "3.10"

[tool.hatch.envs.default.scripts]
setup-precommit = "pre-commit install"
code-quality = "pre-commit run --all-files"
unit = "pytest --color=yes -v --profile databricks_cluster -n 10 tests/unit"
# `*-dev` scripts run the unsharded suite locally; CI shards via integration.yml.
cluster-e2e-dev = "pytest --color=yes -v --profile databricks_cluster -n 10 --dist=loadfile tests/functional"
uc-cluster-e2e-dev = "pytest --color=yes -v --profile databricks_uc_cluster -n 10 --dist=loadfile tests/functional"
sqlw-e2e-dev = "pytest --color=yes -v --profile databricks_uc_sql_endpoint -n 10 --dist=loadfile tests/functional"

[tool.hatch.envs.test.scripts]
unit = "pytest --color=yes -v --profile databricks_cluster -n auto --dist=loadscope tests/unit"
unit-with-cov = "pytest --color=yes -v --profile databricks_cluster -n auto --dist=loadscope tests/unit --cov=dbt"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.min-deps]
installer = "uv"
python = "3.10"
template = "min-deps"
dependency-groups = ["test"]
post-install-commands = [
    "uv pip install --no-deps --exact --require-hashes -r requirements.lowest-direct.txt",
]

[tool.hatch.envs.min-deps.scripts]
parse = "dbt parse --project-dir tests/min_deps_smoke --profiles-dir tests/min_deps_smoke"
unit = "pytest --color=yes -v --profile databricks_cluster -n 10 --dist=loadscope tests/unit"
e2e = "pytest --color=yes -v --profile databricks_uc_sql_endpoint -n 10 --dist=loadfile tests/functional"

[tool.ruff]
line-length = 100
target-version = 'py39'

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E203"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
]
env_files = ["test.env"]
testpaths = ["tests/unit", "tests/functional"]
markers = [
    "external: mark test as requiring an external location",
    "python: mark test as running a python model",
    "dlt: mark test as running a DLT model",
]

[tool.mypy]
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["databricks.*", "agate.*", "jinja2.*", "yaml.*"]
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
branch = true
source = ["dbt"]
